change banner in footer

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -114,9 +114,9 @@ h6 {
 }
 
 .banner {
-    padding: 100px 0;
+    padding: 130px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/need_code.png) no-repeat center center;
     background-size: cover;
 }
 
