--- a/css/card-bs.css
+++ b/css/card-bs.css
@@ -239,3 +239,16 @@
     width: 100%;
   }
 }
+
+.img-thumbnail {
+  max-width: 100%;
+  height: auto;
+  padding: 4px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
